# DCA

./: CMakeLists.txt
cmake/: dca_config.cmake  dca_cuda.cmake  dca_mpi.cmake  dca_testing.cmake
include/dca/config/: analysis.hpp.in
include/dca/linalg/util/: memory.hpp
include/dca/math/geometry/tetrahedron_mesh/: tetrahedron_mesh_initializer.hpp
include/dca/math/nfft/: dnfft_1d.hpp
include/dca/math/random/: std_random_wrapper.hpp
include/dca/parallel/mpi_concurrency/: mpi_collective_sum.hpp  mpi_concurrency.hpp
include/dca/parallel/stdthread/: stdthread.hpp
include/dca/parallel/stdthread/thread_pool/: thread_pool.hpp
include/dca/phys/dca_step/cluster_solver/: thread_task_handler.hpp
src/parallel/mpi_concurrency/: CMakeLists.txt
src/parallel/stdthread/thread_pool/: thread_pool.cpp
test/integration/cluster_solver/stdthread_qmci/: stdthread_ctaux_tp_test.cpp
test/integration/coarsegraining/: coarsegraining_test.cpp
test/integration/phys/lattice_mapping/: CMakeLists.txt  lattice_mapping_sp_test.cpp
test/integration/statistical_tests/real_materials/: CMakeLists.txt  NiO_stattest.cpp
test/integration/statistical_tests/square_lattice/: CMakeLists.txt  ctaux_square_lattice_verification_stattest.cpp
test/integration/stdthread_qmci/: CMakeLists.txt  hpxthread_ctaux_tp_test.cpp  stdthread_ctaux_tp_test.cpp
test/integration/stdthread_qmci/gpu/: stdthread_ctaux_gpu_tp_test.cpp
test/system-level/dca/: CMakeLists.txt  dca_sp_DCA+_hpx_test.cpp  dca_sp_DCA+_thread_test.cpp
test/unit/linalg/: matrixop_complex_cpu_test.cpp
(+8 files in other folders)
